Fixes alignment of search results

--- a/_assets/css/search.gov/_form.scss
+++ b/_assets/css/search.gov/_form.scss
@@ -1,6 +1,6 @@
 // SEARCH (desktop)
 #search-results-style {
-    margin: 5%;
+    min-width: 320px;
     //padding: auto;
 }
 
